 * (trac #124) Expanded currency fields to 8 digits maximum length
 * (trac #126) Fixed a bug that was preventing tables on the view account page from paging correctly
 * (trac #125) Fixed a bug that was preventing the user from moving past the 
               Domain Contact page in the Order interface under certain 
               installations of PHP

9/12/2006 - jdiamond
====================

 * Fixed a bug that was preventing the Order interface from functioning when only
   the Pay by Check setting was turned on

9/11/2006 - jdiamond
====================

 * Branched off v0.4
 * v0.5 development will now begin in the main trunk

9/10/2006 - jdiamond
====================

 * (trac #111) Fixed an "Invalid Account" bug that occured when the user canceled a domain edit

9/8/2006 - jdiamond
====================

 * (trac #110) Invoices were not being updated to "outstanding" whenever a payment was removed

9/7/2006 - jdiamond
====================

 * (trac #113) Added a "currency" setting for the Paypal WPS module

8/24/2006 - jdiamond
====================

 * Added a Turkish translation for the Order interface

8/22/2006 - jdiamond
====================

 * Fixed another IE compatibility issue in the "Add Note" function
 * Added a Turkish translation for the Manager interface

8/18/2006 - jdiamond
====================

 * Fixed an browser compatibility issue in the Order interface

8/15/2006 - jdiamond
====================

 * (trac #108) Expanded the valid range of area code's and country code's from 3 digits to 6 digits

8/13/2006 - jdiamond
====================

 * Fixed some of the Portuguese translation

8/10/2006 - jdiamond
====================

 * Fixed a "blank query" bug in the installer
 * (trac #106) Fixed a bug that prevented taxes from being calculated for orders

8/8/2006 - jdiamond
====================

 * (trac #105) Added restrictions to the Order interface to prevent it from functioning when there are no